# faf-radio-rust

./: .faf-dna  .gitignore  BENCHMARK-COMPACT.md  BENCHMARK-VERIFIED-2026-02-16.md  BENCHMARK.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  benchmark-10x.js  benchmark-extreme.js  benchmark-grok-size.js  benchmark-project.js  benchmark-real.js  benchmark.sh  grok-minimal.faf  project.faf  test.faf  test.fafb
.github/workflows/: ci.yml
demos/: fafb-performance.tape
examples/: basic.rs  multi_ai.rs
src/: error.rs  lib.rs  types.rs
tests/: WJTTC-TEST-SUITE.md  tier1_frequency_validation.rs  tier2_core_functionality.rs  tier3_edge_cases.rs  tier4_broadcast_grok.rs
